# ChangeLog for app-accessibility/speakup-utils
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/ChangeLog,v 1.3 2007/02/21 19:23:28 peper Exp $

  21 Feb 2007; <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  04 Feb 2006; William Hubbs <williamh@gentoo.org> speakup-utils-1.0.ebuild:
  Stable on x86.

*speakup-utils-1.0 (06 Oct 2005)

  06 Oct 2005; William Hubbs <williamh@gentoo.org> +metadata.xml,
  +speakup-utils-1.0.ebuild:
  Initial Commit
