@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/speakup-utils-1.0.ebuild,v 1.3 2006/02/04 02:55:18 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/speakup-utils-1.0.ebuild,v 1.4 2009/10/17 21:58:51 halcy0n Exp $
 
 inherit eutils
 
@@ -13,6 +13,7 @@ KEYWORDS="x86"
 IUSE=""
 
 DEPEND=">=sys-libs/ncurses-5.4"
+RDEPEND="${DEPEND}"
 
 src_compile() {
 	make || die"Compile Failed"
