@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/speakup-utils
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/ChangeLog,v 1.3 2007/02/21 19:23:28 peper Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/ChangeLog,v 1.4 2009/10/17 21:58:51 halcy0n Exp $
+
+  17 Oct 2009; Mark Loeser <halcy0n@gentoo.org> speakup-utils-1.0.ebuild:
+  QA fixes; implicit RDEPEND
 
   21 Feb 2007; <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
